<resources>
    <string name="app_name">Chicken Nugget</string>
    <string name="welcome_msg">Welcome to the Chicken App</string>
    <string name="chicken_joke">Why did the chicken go to Burger King?</string>
    <string name="why">Why?</string>
    <string name="punchline_intro">To see a</string>
    <string name="jokes">Jokes</string>
    <string name="recipes">Recipes</string>
    <string name="products">Products</string>
    <string name="jokes_message">You chose Jokes</string>
    <string name="recipes_message">You chose Recipes</string>
    <string name="products_message">You chose Products</string>
    <string name="joke1">joke1</string>
    <string name="input_new_product">Input New Product</string>

    <string name="editText_uri">www.google.com/chicken_jokes</string>
    <string name="button_uri">Search</string>
    <string name="editText_loc">GoldenGateBridge</string>
    <string name="button_loc">Open Location</string>
    <string name="editText_share">I love Chicken Nuggets</string>
    <string name="button_share">Share This Text</string>

    <string name="google_maps_api_key">AIzaSyDFROzqjoEFLsQ_mJY11LdWd5YOC_JF6fI</string>
    <string name="title_activity_maps">Map</string>
    <string name="product_name_label">Name</string>
    <string name="product_name_hint">Enter the product name</string>
    <string name="add_product_desc">Description</string>
    <string name="imagelink_label">ImageLink</string>
    <string name="imageLink_hint">Enter a link to the image</string>
    <string name="menu_label">Menu</string>

    <string name="empty_not_saved">Word not saved because it is empty.</string>
    <string name="logout">Logout</string>

</resources>
